Fix: Chat UI layout bug with Tailwind v4 fixes

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,16 +5,6 @@
     includeScrollbarStyles: true
 ));
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  body {
-    @apply antialiased;
-  }
-}
-
 .custom-scrollbar::-webkit-scrollbar {
   width: 5px;
 }
